adds additional markup refinemtns to newsroomArticles.html. adds refinements to button and col element styles in newsroon-articles.scss. adds responsive overrides refinements to nav bar and adds refinements to navbar in general. adds compiled files

--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-articles.scss
@@ -31,16 +31,19 @@
 			    	letter-spacing: none;
 		    	}
 			}
-			button {
-				font-size: 20px;
-				padding: 20px 16px;
-				margin-top: 20px;
-		        background: $msu-red;
-		        color: #ffffff;
-		        width: 100%;
-		        max-width: 310px;
-		        font-weight: 800;
-		        border-radius: 0px;
+			.article-cta {
+				float: none;
+				button{
+					font-size: 20px;
+					padding: 20px 16px;
+					margin-top: 20px;
+			        background: $msu-red;
+			        color: #ffffff;
+			        width: 100%;
+			        // max-width: 320px;
+			        font-weight: 800;
+			        border-radius: 0px;
+				}
 			}
 		}
 	}
