--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -12127,11 +12127,12 @@ nav.navbar {
   .newsroom-nav-container .collapse {
     border: none;
     background: #d11242;
-    opacity: 0.9;
   }
   .newsroom-nav-container .collapse.navbar-collapse {
-    margin-right: -18px;
-    margin-left: -18px;
+    padding: 15px 0px;
+  }
+  .newsroom-nav-container li {
+    padding-right: 0px;
   }
   .newsroom-nav-container li a {
     padding: 10px 15px;
@@ -12145,6 +12146,21 @@ nav.navbar {
 
   .navbar-nav {
     margin: 0px;
+  }
+
+  .homepage-hero .container {
+    top: 0px;
+    margin-bottom: 0px;
+  }
+  .homepage-hero .container .hero-tab {
+    background-color: black;
+    border-bottom: none;
+  }
+  .homepage-hero .container .hero-tab .text-center {
+    text-align: left;
+  }
+  .homepage-hero .container .description-tab .text-center {
+    text-align: left;
   }
 }
 /** specific breakpoint media query being used in Exceptional Case **/
