--- a/development/terminalfour/src/sass/newsroomHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/responsive-overrides.scss
@@ -58,10 +58,30 @@
 				border: none;
 			}
 		}
-		
+		.navbar-header {
+			button.navbar-toggle {
+				&:focus {
+					background-color: transparent;
+				}
+				border: none;
+				span {
+					&.icon-bar {
+						width: 26px;
+						height: 3px;
+						background-color: #ffffff;
+						& + .icon-bar {
+							margin-top: 5px;
+						}
+					}
+				}
+			}
+		}
 	}
 	.navbar-nav {
 		margin: 0px;
+		&.navbar-left {
+			padding-top: 0px;
+		}
 	}
 	.homepage-hero {
 		.container {
@@ -80,6 +100,9 @@
 				}
 			}
 		}
+	}
+	.article-container {
+
 	}
 }
 
