adds newsroomFooter component ttemplate in newsrooomHomepageIncludes. adds new newsroom-footer.scss file. updates newsroom.html includes statement to include new footer. updates newsroom-style.scss with newsroom-footer.scss import. adds compiled files

--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-style.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-style.scss
@@ -21,6 +21,7 @@
 @import "newsroom-nav.scss";
 @import "newsroom-hero.scss";
 @import "newsroom-articles.scss";
+@import "newsroom-footer.scss";
 
 /** Responsive Overrides **/
 @import "responsive-overrides.scss";
