--- a/www-root/style-assets/css/newsroom-style.css
+++ b/www-root/style-assets/css/newsroom-style.css
@@ -7582,6 +7582,10 @@ nav.navbar {
   border-radius: 0px;
 }
 
+footer h2 {
+  color: orange;
+}
+
 /** Responsive Overrides **/
 @media only screen and (max-width: 1333px) {
   .newsroom-nav-container .navbar-form .form-control {
