--- a/www-root/includes/newsroomHomepageIncludes/newsroomFooter.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomFooter.html
@@ -5,19 +5,19 @@
 				<div class="col-md-4">
 					<h3 class="footer-header">News Resources</h3>
 					<ul>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
+						<li><a href="">listItem</a></li>
+						<li><a href="">listItem</a></li>
+						<li><a href="">listItem</a></li>
+						<li><a href="">listItem</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
-					<h3 class="footer-header"></h3>
+					<h3 class="footer-header">The Insider</h3>
 					<ul>
-						<li></li>
-						<li></li>
-						<li></li>
-						<li></li>
+						<li><a href="">listItem</a></li>
+						<li><a href="">listItem</a></li>
+						<li><a href="">listItem</a></li>
+						<li><a href="">listItem</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
