--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-footer.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-footer.scss
@@ -3,6 +3,7 @@ footer {
 	color: #FFFFFF;
 	letter-spacing: 0.15em;
 	text-transform: uppercase;
+	margin-top: 100px;
 	a {
 		color: white;
 	}
@@ -15,6 +16,7 @@ footer {
 			list-style-type: none;
 			padding-top: 30px;
 			padding-left: 0px;
+			padding-right: 50px;
 			li {
 				padding: 25px 0px;
 				border-bottom: 3px solid rgba(255, 255,255, 0.5);
@@ -24,7 +26,9 @@ footer {
 				}
 			}
 		}
-
+		img {
+			width: auto;
+		}
 		.icon-links {
 			padding-top: 50px;
 		}
@@ -32,19 +36,28 @@ footer {
 	.footer-bottom {
 		background: #00447C;
 		.container {
-			padding-top: 30px;
-			padding-bottom: 30px;
+			padding-top: 40px;
+			padding-bottom: 40px;
+			.msu-links {
+				border-right: 3px solid white;
+			}
 			a {
 				font-size: 22px;
 				font-weight: 800;
 			}
 			.ptc {
+				font-weight: 500;
 				padding-top: 30px;
 				font-size: 16px;
-				a {
-					font-size: 16px;
-					font-weight: 400;
+				.links {
+					position: relative;
+				    top: 10px;
+					a {
+						font-size: 16px;
+						font-weight: 500;
+					}
 				}
+				
 			}
 		}
 	}
