adds some groundwork for the some of the style refinements needed for the nav. adds sompiled files.

--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -1,6 +1,6 @@
-<div class="top-banner">
+<!-- <div class="top-banner">
   <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
-</div>
+</div> -->
 <nav class="navbar navbar-default">
   <div class="container-fluid newsroom-nav-container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -12,7 +12,7 @@
         <span class="icon-bar"></span>
       </button>
       <a href="#" class="navbar-brand">
-        <img src="style-assets/media/newsroom-redesign/msu-denver-logo-wide.svg" alt="Newsroom Logo" width="140px">
+        <img src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo" width="140px">
       </a>
     </div>
 
