--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -2,7 +2,7 @@
   <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
 </div> -->
 <nav class="navbar navbar-default">
-  <div class="container-fluid newsroom-nav-container">
+  <div class="container-fluid newsroom-nav-container overlay">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
