--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -12024,12 +12024,17 @@ nav.navbar {
   background: url("./../media/newsroom-redesign/insider-header-background.png");
   background-size: cover;
   background-position: center;
-  background-opacity: 0.5;
-  background-color: #d11242;
+  height: 180px;
+}
+.newsroom-nav-container .navbar-header {
+  position: relative;
+  z-index: 1;
 }
 .newsroom-nav-container .navbar-left {
   padding-top: 22px;
   padding-bottom: 22px;
+  position: relative;
+  z-index: 1;
 }
 .newsroom-nav-container .collapse.navbar-collapse {
   padding: 0px 0px;
@@ -12103,6 +12108,21 @@ nav.navbar {
   font-size: 18px;
   text-transform: uppercase;
   letter-spacing: 0.075em;
+}
+
+.overlay {
+  position: relative;
+}
+
+.overlay:after {
+  background-color: #d11242;
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.8;
 }
 
 /** Responsive Overrides **/
