adds additional refinemtns to element sizing, positioning, and backgorund opacity and color in the nav component. adds compiled files

--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -19,9 +19,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <!-- <ul class="nav navbar-nav">
-        
       </ul> -->
       <ul class="nav navbar-nav navbar-left">
+        <h3>News from MSU Denver</h3>
         <li><a href="#" class="underline-link">Recent Stories</a></li>
         <li><a href="#" class="underline-link">All Stories</a></li>
         <li><a href="#" class="underline-link">Trending Topics</a></li>
@@ -34,7 +34,9 @@
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Search Insider News">
           <span class="input-group-btn">
-            <button class="btn btn-default" type="button"><span class="fa fa-search fa-2x"></span></button>
+            <div class="form-group">
+              <button class="btn btn-default" type="button"><span class="fa fa-search fa-2x"></span></button>
+            </div>
           </span>
         </div><!-- /input-group -->
       </form>
