adds additional markup to the article detail page. creates new style file newsroom-detail.scss. adds the import for newsroom-detail.scss in newsroom-style.scss. adds compiled files.

--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-style.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-style.scss
@@ -21,6 +21,10 @@
 @import "newsroom-nav.scss";
 @import "newsroom-hero.scss";
 @import "newsroom-articles.scss";
+
+//Article-detail
+@import "newsroom-detail.scss";
+
 @import "newsroom-footer.scss";
 
 /** Responsive Overrides **/
