adds some additional styles to the blog body section in the article detail page

--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-detail.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-detail.scss
@@ -1,3 +1,18 @@
 .newsroom-article-detail {
 	padding-top: 50px;
+	p {
+		margin: 30px 0px;
+		line-height: 30px;
+		font-weight: 500;
+	}
+	blockquote {
+		font-weight: 700;
+		font-style: italic;
+		background-color: #eeeeee;
+		text-align: center;
+		padding: 30px 22px; 
+	}
+	img {
+		width: 100%;
+	}
 }
