adds document read to newsroom.js. udpates markup with new overlay class definition. updates class definition for overlay in newsroom-nav.scss. updates newsroom.html with script tag for newsroom.js

--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
@@ -131,11 +131,11 @@ nav {
 
 }
 
-.overlay {
+.news-overlay {
 	position: relative;
 }
 
-.overlay:after {
+.news-overlay:after {
 	background-color: $msu-red;
 	position: absolute;
 	content:"";
