--- a/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
+++ b/development/terminalfour/src/html/includes/newsroomHomepageIncludes/newsroomNav.html
@@ -1,8 +1,8 @@
 <!-- <div class="top-banner">
   <img src="style-assets/media/newsroom-redesign/insider-header-background.png" alt="Insider Banner">
 </div> -->
-<nav class="navbar navbar-default">
-  <div class="container-fluid newsroom-nav-container news-overlay">
+<nav id="main-news-nav" class="navbar navbar-default">
+  <div id="newsroom-nav" class="container-fluid newsroom-nav-container news-overlay">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
@@ -12,7 +12,7 @@
         <span class="icon-bar"></span>
       </button>
       <a href="#" class="navbar-brand">
-        <img src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo" width="140px">
+        <img id="newsroom-logo" src="style-assets/media/newsroom-redesign/red_logo.svg" alt="Newsroom Logo" width="140px">
       </a>
     </div>
 
@@ -21,12 +21,12 @@
       <!-- <ul class="nav navbar-nav">
       </ul> -->
       <ul class="nav navbar-nav navbar-left">
-        <h3>News from MSU Denver</h3>
+        <h3 id="nav-h3">News from MSU Denver</h3>
         <li><a href="#" class="underline-link">Recent Stories</a></li>
         <li><a href="#" class="underline-link">All Stories</a></li>
         <li><a href="#" class="underline-link">Trending Topics</a></li>
       </ul>
-      <form class="navbar-form navbar-right">
+      <form id="nav-right" class="navbar-form navbar-right">
         <!-- <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
