--- a/www-root/includes/newsroomHomepageIncludes/newsroomHomepageHero.html
+++ b/www-root/includes/newsroomHomepageIncludes/newsroomHomepageHero.html
@@ -1,4 +1,4 @@
-<div class="homepage-hero">
+<div id="news-hero" class="homepage-hero">
 	<img src="style-assets/media/newsroom-redesign/bradleypayton-insider-0400-ms180208-cc.jpg" alt="Featured Story Image">
 	<div class="container">
 		<div class="row hero-tab">
