cleans some styles on header and resources

--- a/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageResources.html
+++ b/development/terminalfour/src/html/includes/admissionsHomepageIncludes/admissionsHomepageResources.html
@@ -39,7 +39,7 @@
 					<a href="" >Parents</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
-					<a href="" >High School / Community College Counselors</a>
+					<a href="" >Academic Calendar</a>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-4 resources-link">
 					<a href="" >Contact Us</a>
