--- a/development/terminalfour/src/html/includes/vendor-includes/header-vendor.html
+++ b/development/terminalfour/src/html/includes/vendor-includes/header-vendor.html
@@ -2,7 +2,7 @@
 <a href="#content" class="skip-content">Skip to main content</a>
 <header>
    <div class="navbar-fixed-top">
-         <div class="row container-fluid">
+         <div class="container">
            <div class="col-xs-12 col-md-6">
               <h1>Site Name </h1>
            </div>
