--- a/www-root/includes/vendor-includes/footer-vendor.html
+++ b/www-root/includes/vendor-includes/footer-vendor.html
@@ -8,15 +8,15 @@
                           <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
                       </div>
 
-                      <div class="col-xs-6 col-md-6">
+                      <div class="col-xs-6 col-md-5">
                             <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
                             <p><a href="javascript:void(0)">Denver, Colorado</a></p>
                             <p><a href="javascript:void(0)">303-556-5740</a></p>
                             <p><a onclick="javascript:void(0)" href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
                       </div>
 
-                      <div class="col-xs-6 col-md-4">
-                          <p class="privacy-statement"><a href="javascript:void(0)"><small>&copy; MSU Denver</small></a> - <a href="javascript:void(0)"><small>Privacy Statement</small></a></p>
+                      <div class="col-xs-6 col-md-5">
+                          <p class="privacy-statement"><a href="https://msudenver.edu"><small>&copy; MSU Denver All Rights Reserved</small></a> | <a href="https://msudenver.edu/privacy"><small>Privacy Statement</small></a></p>
                       </div>
                   </div><!-- .row -->
 
