--- a/www-root/style-assets/css/vendor-style.css
+++ b/www-root/style-assets/css/vendor-style.css
@@ -7380,951 +7380,6 @@ button.close {
   }
 }
 /** -------  End Bootstrap  v 3.3.7 -------- **/
-/** SVG fallback for IE 8 **/
-header {
-  background-color: #505050;
-  text-align: center;
-  color: #fff;
-}
-
-/**  Homepage Feature Components michael.mason@terminalfour.com **/
-/* MainHeaderNavigation Styles */
-.navbar .navbar-collapse {
-  text-align: center;
-}
-
-.fac-staf-stu-mobile {
-  padding-left: 20px !important;
-  font-weight: 500;
-  line-height: 2.5em;
-}
-
-.navbar {
-  border: 0;
-  margin-bottom: 0;
-  border-radius: 0px;
-  background: #fff;
-}
-.navbar ul li {
-  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #00447c;
-  -webkit-transition: all 0.25s ease-in-out;
-  -moz-transition: all 0.25s ease-in-out;
-  -o-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
-  list-style: none;
-}
-.navbar ul li:hover {
-  color: #333;
-}
-
-.navbar-collapse {
-  padding-right: 0;
-  padding-left: 0;
-}
-
-.nav > a > li {
-  display: inline;
-  line-height: 50px;
-  font-weight: 800;
-  font-size: 1.0em;
-  padding-bottom: 8px;
-}
-
-#bs-example-navbar-collapse-1 {
-  overflow-y: scroll;
-}
-
-/* enable absolute positioning */
-/* style glyph */
-/* align glyph */
-/* add padding  */
-/* add back pointer functionality for x-out button  */
-.apply-button {
-  background: #d11242;
-  color: #fff;
-  font-size: 1.0em;
-  border-radius: 0 0 10px 10px;
-  text-align: center;
-  padding: 0.3em 0.3em;
-  width: 8%;
-  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  letter-spacing: 2px;
-  float: right !important;
-  margin-left: 0.15em;
-  margin-right: .5em;
-  -webkit-transition: background .25s ease;
-  -moz-transition: background .25s ease;
-  -o-transition: background .25s ease;
-  transition: background .25s ease;
-}
-
-.apply-button:hover {
-  background: #a60029;
-}
-
-.give-visit-buttons {
-  -webkit-transition: background .25s ease;
-  -moz-transition: background .25s ease;
-  -o-transition: background .25s ease;
-  transition: background .25s ease;
-  background: gray;
-  margin-right: 0em;
-}
-
-.give-visit-buttons:hover {
-  background: #424448;
-}
-
-ul.nav.navbar-nav li .visit-give-mobile {
-  background: #555555;
-  color: #fff;
-  font-size: 1.0em;
-  border-radius: 5px 5px 5px 5px;
-  margin: 0.75em 0.25em 0em 0em;
-  text-align: center;
-  width: 99%;
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  letter-spacing: 2px;
-  float: right !important;
-  -webkit-transition: background .25s ease;
-  -moz-transition: background .25s ease;
-  -o-transition: background .25s ease;
-  transition: background .25s ease;
-}
-
-.apply-mobile {
-  background: #d11242;
-  color: white;
-  font-size: 1.0em;
-  border-radius: 5px 5px 5px 5px;
-  margin: 0.75em 0.25em 0.4em 0em;
-  text-align: center;
-  width: 99%;
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  letter-spacing: 2px;
-  float: right !important;
-  -webkit-transition: background .25s ease;
-  -moz-transition: background .25s ease;
-  -o-transition: background .25s ease;
-  transition: background .25s ease;
-}
-
-.msudenver_logo {
-  margin: 15px;
-  height: 35px;
-  float: left;
-}
-
-.faculty-staff-students a {
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  letter-spacing: 0px;
-  margin-top: -1.0em;
-  color: #fff;
-  padding-bottom: 0.2em;
-  padding-left: 6px;
-  display: none;
-}
-
-col-xs-12, .faculty-staff-students {
-  text-align: right;
-  margin-top: -35px;
-}
-
-#nav-faculty {
-  width: auto;
-}
-
-#nav-admissions {
-  width: auto;
-}
-
-#nav-academics {
-  width: auto;
-}
-
-#nav-campus {
-  width: auto;
-}
-
-#nav-alumni {
-  width: auto;
-}
-
-a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, a[name="E"]:before, a[name="F"]:before, a[name="G"]:before, a[name="H"]:before, a[name="I"]:before, a[name="J"]:before, a[name="K"]:before, a[name="L"]:before, a[name="M"]:before, a[name="N"]:before, a[name="O"]:before, a[name="P"]:before, a[name="Q"]:before, a[name="R"]:before, a[name="S"]:before, a[name="T"]:before, a[name="U"]:before, a[name="V"]:before, a[name="W"]:before, a[name="X"]:before, a[name="Y"]:before, a[name="Z"]:before {
-  content: "";
-  display: block;
-  height: 180px;
-  /* fixed header height*/
-  margin: -180px 0 0;
-}
-
-@-moz-document url-prefix() {
-  a[name="A"], a[name="B"], a[name="C"], a[name="D"], a[name="E"], a[name="F"], a[name="G"], a[name="H"], a[name="I"], a[name="J"], a[name="K"], a[name="L"], a[name="M"], a[name="N"], a[name="O"], a[name="P"], a[name="Q"], a[name="R"], a[name="S"], a[name="T"], a[name="U"], a[name="V"], a[name="W"], a[name="X"], a[name="Y"], a[name="Z"] {
-    position: relative;
-    border-top: 162px solid transparent;
-    /* navbar height +2 */
-    margin: -30px 0 0;
-    -webkit-background-clip: padding-box;
-    -moz-background-clip: padding;
-    background-clip: padding-box;
-  }
-
-  a[name="A"]:before, a[name="B"]:before, a[name="C"]:before, a[name="D"]:before, a[name="E"]:before, a[name="F"]:before, a[name="G"]:before, a[name="H"]:before, a[name="I"]:before, a[name="J"]:before, a[name="K"]:before, a[name="L"]:before, a[name="M"]:before, a[name="N"]:before, a[name="O"]:before, a[name="P"]:before, a[name="Q"]:before, a[name="R"]:before, a[name="S"]:before, a[name="T"]:before, a[name="U"]:before, a[name="V"]:before, a[name="W"]:before, a[name="X"]:before, a[name="Y"]:before, a[name="Z"]:before {
-    content: "";
-    position: absolute;
-    top: -170px;
-    left: 0;
-    right: 0;
-    border-top: 170px solid #ccc;
-  }
-}
-.hide-pipe {
-  display: none;
-}
-
-#nav-search {
-  position: absolute;
-  top: -4.2em;
-  right: 4.5em;
-}
-
-#nav-search a {
-  color: #fff;
-  background: #005fae;
-}
-
-.navbar {
-  min-height: 0;
-}
-
-.navbar-nav > li#nav-search > a {
-  padding: 13px 1em;
-}
-
-a.btn.btn-default.visit-give-mobile, a.btn.btn-default.give-mobile, a.btn.btn-default.apply-mobile {
-  text-align: center;
-}
-
-div#bs-example-navbar-collapse-1.collapse.navbar-collapse, div#bs-example-navbar-collapse-1 {
-  transition: max-height 500ms cubic-bezier(0.42, 0, 0.58, 1);
-  box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175);
-}
-
-.fa.pull-right {
-  margin-left: 0.5em;
-  margin-top: 0.1em;
-}
-
-#searchModal .modal-content {
-  background-color: transparent;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  border: none;
-}
-
-#searchModal .modal-body {
-  padding: 0;
-}
-
-#searchModal .modal-dialog {
-  margin: 0px auto;
-}
-
-#searchModal .close, #searchModal .close:hover {
-  color: #fff;
-  opacity: 1;
-  font-size: 15px;
-  font-weight: 200;
-  line-height: 1;
-  text-shadow: none;
-  letter-spacing: 2px;
-}
-
-#searchModal .modal-header {
-  padding: 0;
-  border-bottom: none;
-}
-
-#searchModal .modal-footer {
-  padding: 0;
-  text-align: right;
-  border-top: none;
-}
-
-#searchModal .modal-header .close {
-  margin-top: 4em;
-}
-
-button.close {
-  padding-bottom: 10px;
-}
-
-button.close span b {
-  font-size: 30px;
-}
-
-div.modal-body form button.btn.btn-default {
-  position: relative;
-  top: -50px;
-  float: right;
-  padding: 5px 12px;
-}
-
-.modal-body > form > .form-group > .form-control {
-  border: 0px;
-  border-radius: 0;
-}
-
-::-webkit-input-placeholder {
-  font-style: italic;
-}
-
-:-moz-placeholder {
-  font-style: italic;
-}
-
-::-moz-placeholder {
-  font-style: italic;
-}
-
-:-ms-input-placeholder {
-  font-style: italic;
-}
-
-button.close b {
-  position: relative;
-  top: 5px;
-}
-
-.submit-desktop {
-  position: relative;
-  top: -52px;
-  float: right;
-  padding: 5px 15px;
-  color: #00447c !important;
-  font-size: 25px !important;
-  background: transparent;
-  border: none;
-}
-
-.search-button-text {
-  display: none;
-}
-
-.nav > li > a:hover, .nav > li > a:focus {
-  background-color: #eeeeee;
-}
-
-.modal-dialog {
-  width: 80%;
-}
-
-li#nav-search > a {
-  width: 3.5rem;
-}
-
-.form-group {
-  background: white;
-}
-
-.collapse {
-  height: auto !important;
-}
-
-span.fa.fa-bars {
-  font-size: x-large;
-}
-
-.navbar-toggle {
-  padding: 17px !important;
-}
-
-span.fa.fa-search.search-desktop {
-  font-size: 1.5em;
-}
-
-.visit-give-mobile {
-  background: #555555;
-  color: #fff;
-  font-size: 1.0em;
-  border-radius: 5px 5px 5px 5px;
-  margin: 0.75em 0.25em 0em 0em;
-  text-align: center;
-  width: 99%;
-  font-family: 'Gotham A', 'Gotham B', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  letter-spacing: 2px;
-  float: right !important;
-  -webkit-transition: background .25s ease;
-  -moz-transition: background .25s ease;
-  -o-transition: background .25s ease;
-  transition: background .25s ease;
-}
-
-a.btn.btn-default.visit-give-mobile, a.btn.btn-default.apply-mobile {
-  text-align: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  line-height: 22px;
-  display: block;
-  padding: 10px 15px;
-  font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #fff;
-  -webkit-transition: all 0.25s ease-in-out;
-  -moz-transition: all 0.25s ease-in-out;
-  -o-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
-  list-style: none;
-  margin-bottom: 0;
-  padding-left: 0;
-}
-
-div#searchModal.modal.fade.in {
-  top: 0;
-}
-
-@media (max-width: 991px) {
-  #nav-admissions {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
-  #nav-athletics {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
-  .inner-addon .fa-search {
-    padding: 0.9em 1em 1em 1em;
-  }
-
-  .left-addon input {
-    padding-left: 4em;
-  }
-
-  .header-container {
-    line-height: 2.4em;
-  }
-
-  .navbar-toggle {
-    display: block !important;
-  }
-}
-@media (min-width: 768px) {
-  a.btn.btn-default.visit-give-mobile, a.btn.btn-default.apply-mobile {
-    padding-top: 14px;
-    padding-bottom: 14px;
-    padding-top: 14px;
-    padding-bottom: 14px;
-  }
-}
-@media screen and (max-width: 991px) {
-  body {
-    padding-top: 79px;
-  }
-
-  .navbar-collapse {
-    border-top: 5px solid #005fae;
-  }
-
-  .navbar .navbar-collapse .search-input-mobile, .navbar .navbar-collapse {
-    text-align: left;
-    border-right: none;
-  }
-
-  #content-nav #search-input input[type="text"] {
-    width: 100%;
-  }
-
-  #content-nav #nav-search-close {
-    left: 70%;
-  }
-
-  #content-nav-mobile {
-    display: block;
-    padding-left: 0px;
-    width: 101%;
-    text-align: left;
-  }
-
-  .left-addon input {
-    padding-top: 5px !important;
-    padding-bottom: 2px;
-  }
-
-  .navbar-collapse {
-    border-top: 1px solid transparent;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-  }
-
-  .navbar-fixed-top {
-    top: 0;
-    border-width: 0 0 0px;
-  }
-
-  .navbar-collapse.collapse {
-    display: none !important;
-  }
-
-  .navbar-nav {
-    float: none !important;
-    margin: 0px;
-  }
-
-  .navbar-nav > li {
-    float: none;
-  }
-
-  .navbar-nav > li > a {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 1.8em;
-    padding-right: 1.8em;
-  }
-
-  .collapse.in {
-    display: block !important;
-  }
-
-  .apply-button {
-    display: none;
-  }
-
-  .pushdown-menu {
-    margin-top: 0em;
-    padding-top: 0em;
-    margin-left: 2em;
-    padding-left: 1.2em;
-  }
-
-  .visit-give-mobile, .apply-mobile {
-    display: block;
-  }
-
-  .fac-staf-stu-mobile {
-    top: unset;
-  }
-
-  div[alt^="Asphalt"] {
-    box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.175);
-  }
-
-  i.fa.fa-angle-down.fa-lg {
-    float: right;
-  }
-
-  a.btn.btn-default.visit-give-mobile, a.btn.btn-default.apply-mobile {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 1.8em;
-    padding-right: 1.8em;
-    display: block;
-  }
-}
-@media (min-width: 992px) {
-  body {
-    padding-top: 150px;
-  }
-
-  .header-container {
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  .header-container:before, .header-container:after {
-    content: " ";
-    display: table;
-  }
-  .header-container:after {
-    clear: both;
-  }
-
-  .msudenver_logo {
-    height: 65px;
-  }
-
-  .navbar .navbar-nav {
-    display: inline-block;
-    float: none;
-  }
-
-  .navbar .navbar-collapse {
-    text-align: center;
-  }
-
-  .dropdown-menu {
-    background-color: rgba(255, 255, 255, 0.95);
-    border-bottom: red;
-    border: 0px;
-    border-bottom: 3px solid #d11242;
-    border-radius: 0;
-  }
-
-  li.dropdown {
-    font-size: 0.74em;
-    margin-top: 8px;
-    padding: 0px;
-    border-bottom: none;
-    margin-right: 0.8em;
-    border-right: 1px solid #337ab7;
-  }
-
-  li.dropdown.last {
-    border-right: none;
-    margin-right: none;
-  }
-
-  ul.dropdown-menu li {
-    margin-top: 0px;
-  }
-
-  ul.pushdown-menu > a li {
-    padding-top: 0;
-  }
-
-  .dropdown-last {
-    border-right: none !important;
-    margin-right: none !important;
-  }
-
-  .navbar-collapse #wrapper {
-    display: none;
-  }
-
-  .fa-search-mobile {
-    display: none !important;
-  }
-
-  .container-dropdown {
-    display: none;
-  }
-
-  #nav-search {
-    top: 18px;
-    margin-top: 9px;
-  }
-
-  ul.nav.navbar-nav li a {
-    padding: 10px 18px;
-  }
-
-  #content-nav {
-    background: linear-gradient(to bottom, #fff 0px, #fff 70px, #ddd 55px);
-  }
-
-  .mobile-header {
-    border-right: 1px solid #337ab7;
-  }
-
-  .container .pushdown-menu {
-    border-right: 1px solid #4cb4f2;
-  }
-
-  .faculty-staff-students a {
-    display: inline-block;
-  }
-
-  .mobile-header > .fa.fa-chevron-down {
-    display: none;
-  }
-
-  .left-addon .fa-search {
-    top: 0em;
-  }
-
-  .pushdown-menu {
-    height: 29em;
-  }
-
-  #content-nav #nav-search-close {
-    top: -3.2em;
-    left: 18.5em;
-  }
-
-  #nav-faculty {
-    width: 11em;
-  }
-
-  #nav-admissions {
-    width: 14em;
-  }
-
-  #nav-academics {
-    width: 14em;
-  }
-
-  #nav-campus {
-    width: 11em;
-  }
-
-  #nav-alumni {
-    width: 12em;
-  }
-
-  #content-nav #search-input input[type="text"] {
-    padding-top: 0.3em;
-  }
-
-  .apply-mobile {
-    font-size: 1.2em;
-    background: #d11242;
-    transition: background .25s ease !important;
-  }
-
-  .apply-mobile:hover {
-    background: #a60029;
-    color: #fff;
-  }
-
-  .visit-give-mobile {
-    background: gray;
-    transition: background .25s ease !important;
-  }
-
-  .visit-give-mobile:hover {
-    background: #424448;
-    color: #fff;
-  }
-
-  a.btn.btn-default.visit-give-mobile, a.btn.btn-default.give-mobile, a.btn.btn-default.apply-mobile {
-    text-align: center;
-    text-transform: uppercase;
-    width: 9% !important;
-    top: -110px;
-    border-radius: 0 0 10px 10px !important;
-    padding: 0.3em 1.2em !important;
-  }
-
-  .visit-give-mobile, .apply-mobile {
-    font-size: 1.2em;
-  }
-
-  a.btn.btn-default.visit-give-mobile {
-    right: 22%;
-    padding: 0.3em 0.1em !important;
-  }
-
-  a.btn.btn-default.give-mobile {
-    right: 12.8%;
-    padding: 0.3em 0.1em !important;
-  }
-
-  a.btn.btn-default.apply-mobile {
-    right: 3.56%;
-    padding: 0.3em 0.1em !important;
-  }
-
-  a.apply-mobile, a.visit-give-mobile, .fac-staf-stu-mobile {
-    position: absolute !important;
-  }
-
-  .fac-staf-stu-mobile li, .fac-staf-stu-mobile li.hide-pipe {
-    display: inline;
-  }
-
-  ul.fac-staf-stu-mobile {
-    right: 9%;
-    top: -2.5em;
-  }
-
-  ul.fac-staf-stu-mobile li a, .fac-staf-stu-mobile li.hide-pipe {
-    font-family: 'Gotham A', 'Gotham B', sans-serif;
-    font-style: normal !important;
-    font-weight: 400 !important;
-    letter-spacing: 0px !important;
-    color: #fff !important;
-    font-size: 16px !important;
-    line-height: 1.5 !important;
-  }
-
-  a.dropdown-toggle, ul.nav.navbar-nav li a {
-    color: #003a6e;
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 17px;
-  }
-
-  .dropdown-menu > li > a {
-    font-size: 0.8em !important;
-  }
-
-  .navbar-nav > li > a {
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-
-  li.dropdown {
-    margin-bottom: 0;
-    margin-right: 0;
-  }
-
-  #nav-search {
-    position: relative;
-    top: inherit;
-    right: inherit;
-  }
-
-  #nav-search a {
-    background: #00447c;
-    position: relative;
-    border-radius: 6px;
-    font-size: small;
-    font-weight: 400;
-  }
-
-  .nav > li#nav-search * {
-    font-size: small;
-  }
-
-  #nav-search a:hover {
-    background: #003663;
-  }
-
-  .fa-search {
-    color: #fff;
-  }
-
-  .navbar-toggle {
-    display: none;
-  }
-
-  .search-button-text {
-    display: inline;
-  }
-
-  li#nav-search > a {
-    width: 7rem;
-  }
-
-  li#nav-search a {
-    padding-top: 0;
-  }
-
-  .navbar-nav > li#nav-search > a {
-    padding: 8px 1em;
-  }
-
-  li.collapse.navbar-collapse {
-    position: inherit;
-  }
-
-  li.dropdown.collapse.navbar-collapse {
-    position: relative;
-  }
-
-  #bs-example-navbar-collapse-1 {
-    overflow: visible;
-  }
-
-  a.btn.btn-default.visit-give-mobile, a.btn.btn-default.apply-mobile {
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 18px;
-    padding: 10px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-}
-@media (min-width: 1200px) {
-  .header-container, .container-fluid {
-    padding-left: 8.3333333333%;
-    padding-right: 8.3333333333%;
-  }
-
-  #content-nav {
-    font-weight: 600;
-    font-size: 18px;
-  }
-
-  .nav > li * {
-    padding: 0px;
-    font-size: 1.33em;
-  }
-
-  .fa-search {
-    font-size: 1.2em;
-  }
-
-  a.btn.btn-default.visit-give-mobile {
-    right: 27.77%;
-    width: 9% !important;
-    top: -110px;
-    border-radius: 0 0 10px 10px !important;
-    padding: 0.3em 1.2em !important;
-  }
-
-  a.btn.btn-default.give-mobile {
-    right: 18.6%;
-    width: 9% !important;
-    top: -110px;
-    border-radius: 0 0 10px 10px !important;
-    padding: 0.3em 1.2em !important;
-  }
-
-  a.btn.btn-default.apply-mobile {
-    right: 9.4%;
-    width: 9% !important;
-    top: -110px;
-    border-radius: 0 0 10px 10px !important;
-    padding: 0.3em 1.2em !important;
-  }
-
-  a.dropdown-toggle, ul.nav.navbar-nav li a {
-    letter-spacing: 1px;
-    font-size: 18px;
-  }
-
-  .navbar-toggle {
-    display: none;
-  }
-
-  li#nav-search > a {
-    width: 9rem;
-  }
-}
-.msudenver_logo_change {
-  height: 50px;
-}
-
-.skip-content {
-  position: absolute;
-  top: -1000px;
-  left: -1000px;
-  height: 1px;
-  width: 1px;
-  text-align: left;
-  overflow: hidden;
-  font-size: x-large;
-}
-
-a.skip-content {
-  color: white;
-  text-decoration: underline;
-}
-
-a.skip-content:active, a.skip-content:focus, a.skip-content:hover {
-  left: 0;
-  top: -90px;
-  width: auto;
-  height: auto;
-  overflow: visible;
-  color: #fff;
-  font-size: 30px;
-  position: relative;
-  z-index: 10000;
-}
-
 section.admissionsHomepageResources {
   font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
@@ -8492,8 +7547,26 @@ section.admissionsHomepageResources .resources-container .resources-link:hover {
     display: none;
   }
 }
+a.skip-content {
+  display: none;
+}
+
+@media (min-width: 992px) {
+  body {
+    padding-top: 150px;
+  }
+}
 .navbar-fixed-top {
   background-color: #00447c;
+  border-bottom: 10px solid #d11242;
+  text-align: left;
+  padding: 10px 0px;
+  margin-bottom: 20px;
+}
+.navbar-fixed-top h1 {
+  font-size: 40px;
+  color: #fff;
+  font-weight: 700;
 }
 
 .footer-container {
@@ -8504,6 +7577,10 @@ section.admissionsHomepageResources .resources-container .resources-link:hover {
 }
 .footer-container a {
   color: #fff;
+}
+
+section.admissionsHomepageResources .resources-container {
+  border-top: none;
 }
 
 /*# sourceMappingURL=vendor-style.css.map */
