--- a/development/terminalfour/src/html/includes/vendor-includes/header-vendor.html
+++ b/development/terminalfour/src/html/includes/vendor-includes/header-vendor.html
@@ -2,15 +2,16 @@
 <a href="#content" class="skip-content">Skip to main content</a>
 <header>
    <div class="navbar-fixed-top">
+         <div class="col-xs-12 col-md-6 col-md-push-6">
+           <a href="https://msudenver.edu">
+              <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage">
+           </a>
+         </div>
          <div class="container">
-           <div class="col-xs-12 col-md-6">
+           <div class="col-xs-12 col-md-6 col-md-pull-6">
               <h1>Site Name </h1>
            </div>
-            <div class="col-xs-12 col-md-6">
-              <a href="https://msudenver.edu">
-                 <img class="msudenver_logo" src="https://msudenver.edu/media/newsiteassets/images/msudenver_logo_header.svg" alt="MSU Denver Homepage">
-              </a>
-            </div>
+
          </div>
    </div>
 </header>
