--- a/www-root/includes/vendor-includes/footer-vendor.html
+++ b/www-root/includes/vendor-includes/footer-vendor.html
@@ -1,26 +1,18 @@
-<!-- ** Site wide footer ** -->
-
-    <footer>
-    <!-- footer-bg-mob -->
-              <section class="footer-container">
-                  <div class="container">
-                      <div class="col-xs-6 col-md-2">
-                          <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
-                      </div>
-
-                      <div class="col-xs-6 col-md-5">
-                            <p><a href="javascript:void(0)"><strong>Metropolitan State University of Denver</strong></a></p>
-                            <p><a href="javascript:void(0)">Denver, Colorado</a></p>
-                            <p><a href="javascript:void(0)">303-556-5740</a></p>
-                            <p><a onclick="javascript:void(0)" href="javascript:void(0)">Chat with Us (8 a.m.&ndash;5 p.m. MT, Weekdays)</a></p>
-                      </div>
-
-                      <div class="col-xs-6 col-md-5">
-                          <p class="privacy-statement"><a href="https://msudenver.edu"><small>&copy; MSU Denver All Rights Reserved</small></a> | <a href="https://msudenver.edu/privacy"><small>Privacy Statement</small></a></p>
-                      </div>
-                  </div><!-- .row -->
-
-
-              </section><!-- footer .container -->
-
-    </footer>
+<footer>
+    <section class="footer-container">
+        <div class="container">
+            <div class="col-xs-4 col-md-2">
+                <img src="style-assets/media/msudenver_informal.svg"  class="footer-logo-img" alt="MSU logo" />
+            </div>
+            <div class="col-xs-8 col-md-5">
+                  <p><a href="https://msudenver.edu"><strong>Metropolitan State University of Denver</strong></a></p>
+                  <p><a href="https://msudenver.edu/maps/">Denver, Colorado</a></p>
+                  <p>303-556-5740</p>
+                  <p><a href="https://msudenver.edu/contact/" href="javascript:void(0)">Contac Us</a></p>
+            </div>
+            <div class="col-xs-12 col-md-5 privacy-statement">
+                <p><a href="https://msudenver.edu">&copy; MSU Denver All Rights Reserved</a>  |  <a href="https://msudenver.edu/privacy">Privacy Statement</a></p>
+            </div>
+        </div>
+    </section>
+</footer>
