adds navbar element refinemtns to positioning and sizing. responsive refinments to nav bar. adds compiled files

--- a/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/newsroom-nav.scss
@@ -10,6 +10,10 @@ nav {
 	}
 }
 
+.newsroom-mobile-container {
+
+}
+
 .newsroom-nav-container{
 	font-weight: 700;
 	background: url("./../media/newsroom-redesign/insider-header-background.png");
@@ -88,7 +92,7 @@ nav {
 		margin-top: 180px;
 		margin-bottom: 0px;
 		.form-control {
-			width: 540px;
+			width: 20vw;
 		}
 	}
 
