--- a/development/terminalfour/src/sass/newsroomHomepage/responsive-overrides.scss
+++ b/development/terminalfour/src/sass/newsroomHomepage/responsive-overrides.scss
@@ -1,5 +1,13 @@
-@media only screen and (max-width: 1345px) {
+@media only screen and (max-width: 1395px) {
+	.newsroom-nav-container {
+		.navbar-left {
+			.navbar-form {				
+				.form-control {
 
+				}
+			}
+		}
+	}
 }
 
 @media only screen and (max-width: 1333px) {
