--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -12093,7 +12093,7 @@ nav.navbar {
   margin-bottom: 0px;
 }
 .newsroom-nav-container .navbar-form .form-control {
-  width: 540px;
+  width: 20vw;
 }
 .newsroom-nav-container .input-group {
   width: auto;
