--- a/www-root/style-assets/css/newsroom-style.css
+++ b/www-root/style-assets/css/newsroom-style.css
@@ -7484,7 +7484,7 @@ nav.navbar {
   margin-bottom: 0px;
 }
 .newsroom-nav-container .navbar-form .form-control {
-  width: 540px;
+  width: 20vw;
 }
 .newsroom-nav-container .input-group {
   width: auto;
