creates font-size refinments in articles.scss and newsroom-footer.scss. adds compiled files

--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -12148,6 +12148,9 @@ nav.navbar {
   .newsroom-nav-container .navbar-form .form-control {
     width: 299px;
   }
+  .newsroom-nav-container li {
+    padding-right: 30px;
+  }
 }
 @media only screen and (max-width: 991px) {
   .newsroom-nav-container li {
