removes white border on nav element in newsroom-nav.scss. adds font-size refinemnts to newsroom-footer.scss

--- a/www-root/style-assets/css/main-style.css
+++ b/www-root/style-assets/css/main-style.css
@@ -12017,6 +12017,7 @@ section.admissionsHomepageResources .resources-container .resources-link:hover {
 
 nav.navbar {
   margin-bottom: 0px;
+  border: none;
 }
 
 .newsroom-nav-container {
